--- a/client/project/angular.json
+++ b/client/project/angular.json
@@ -24,7 +24,10 @@
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeng/resources/themes/soho-dark/theme.css"
             ],
-            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js"]
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/chart.js/dist/chart.js"
+            ]
           },
           "configurations": {
             "production": {
