--- a/server/project/src/main/resources/application.properties
+++ b/server/project/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/northwind
-spring.datasource.username=fred
-spring.datasource.password=fredfred
+spring.datasource.url=jdbc:mysql://localhost:3306/project_users
+spring.datasource.username=${JDBC_USERNAME}
+spring.datasource.password=${JDBC_PASSWORD}
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=${MONGO_DATABASE}
