configure stock api, refactor login page

--- a/server/project/src/main/resources/application.properties
+++ b/server/project/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=${JDBC_PASSWORD}
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=${MONGO_DATABASE}
+
+rapid.api.key=${RAPID_API_KEY}
