--- a/server/project/src/main/resources/application.properties
+++ b/server/project/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=${MONGO_DATABASE}
 
 rapid.api.key=${RAPID_API_KEY}
+
+spring.data.redis.host=${REDISHOST}
+spring.data.redis.port=${REDISPORT}
+spring.data.redis.username=${REDISUSER}
+spring.data.redis.password=${REDISPASSWORD}
+spring.data.redis.client.type=jedis
