google oauth2 and gmail api

--- a/server/project/src/main/resources/application.properties
+++ b/server/project/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.data.redis.port=${REDISPORT}
 spring.data.redis.username=${REDISUSER}
 spring.data.redis.password=${REDISPASSWORD}
 spring.data.redis.client.type=jedis
+
+google.oauth2.json.file=${GOOGLE_OAUTH2_JSON_FILE}
