--- a/server/project/src/main/resources/application.properties
+++ b/server/project/src/main/resources/application.properties
@@ -15,4 +15,8 @@ spring.data.redis.username=${REDISUSER}
 spring.data.redis.password=${REDISPASSWORD}
 spring.data.redis.client.type=jedis
 
-google.oauth2.json.file=${GOOGLE_OAUTH2_JSON_FILE}
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
+
+
