--- a/client/project/package.json
+++ b/client/project/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@abacritt/angularx-social-login": "^2.1.0",
     "@angular/animations": "^16.0.0",
     "@angular/cdk": "^16.0.3",
     "@angular/common": "^16.0.0",
@@ -24,6 +25,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "angular-oauth2-oidc": "^15.0.1",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.3.0",
     "jspdf": "^2.5.1",
