--- a/client/project/angular.json
+++ b/client/project/angular.json
@@ -18,7 +18,11 @@
             "main": "src/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              "src/assets/images/favicon.png"
+            ],
             "styles": [
               "src/styles.css",
               "node_modules/primeng/resources/primeng.min.css",
