--- a/client/project/package.json
+++ b/client/project/package.json
@@ -30,6 +30,8 @@
     "chart.js": "^4.3.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.29",
+    "lottie-web": "^5.12.2",
+    "ngx-lottie": "^10.0.0",
     "primeicons": "^6.0.1",
     "primeng": "^16.0.0-rc.2",
     "rxjs": "~7.8.0",
