--- a/client/project/package.json
+++ b/client/project/package.json
@@ -32,6 +32,7 @@
     "jspdf-autotable": "^3.5.29",
     "lottie-web": "^5.12.2",
     "ngx-lottie": "^10.0.0",
+    "ngx-paypal": "^11.0.0",
     "primeicons": "^6.0.1",
     "primeng": "^16.0.0-rc.2",
     "rxjs": "~7.8.0",
