--- a/server/project/pom.xml
+++ b/server/project/pom.xml
@@ -70,6 +70,12 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>3.1.2</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.mmnaseri.utils/spring-data-mock -->
 		<dependency>
 			<groupId>com.mmnaseri.utils</groupId>
