--- a/.github/workflows/railway_deployment.yml
+++ b/.github/workflows/railway_deployment.yml
@@ -16,6 +16,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
+    - name: Set up Node.Js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 18
+        
+    - name: Install Angular CLI & Node Dependencies
+      run: |
+        npm install -g @angular/cli
+        npm ci
+
+    - name: Build Angular app
+      run: ng build
+
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
@@ -44,10 +58,14 @@ jobs:
 #         REDISUSER: ${{ vars.REDISUSER }}
 #         REDISPASSWORD: ${{ secrets.REDISPASSWORD }}
 
+    - name: Copy Angular build output to server project static directory
+      run: |
+        cp -r client/project/dist/project/* server/project/src/main/resources/static/
+
     - name: Install Railway
       run: npm i -g @railway/cli
 
-    - name: Deploy
+    - name: Deploy to railway
       run: railway up
       working-directory: server/project
       env:
