debug github actions yaml

--- a/.github/workflows/railway_deployment.yml
+++ b/.github/workflows/railway_deployment.yml
@@ -17,12 +17,21 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Display Environment Variables in action log
+      run: |
+        echo "Environment Variables:"
+        echo "-------------------------------"
+        echo "JDBC_USERNAME: ${{ vars.JDBC_USERNAME }}"
+        echo "REDISUSER: ${{ vars.REDISUSER }}"
+        
+
     - name: Set up Node.Js
       uses: actions/setup-node@v3
       with:
         node-version: 18
         
     - name: Install Angular CLI & Node Dependencies
+      working-directory: client/project
       run: |
         npm install -g @angular/cli
         npm ci
@@ -36,13 +45,6 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
 
-    - name: Display Environment Variables in action log
-      run: |
-        echo "Environment Variables:"
-        echo "-------------------------------"
-        echo "JDBC_USERNAME: ${{ vars.JDBC_USERNAME }}"
-        echo "REDISUSER: ${{ vars.REDISUSER }}"
-        
 
     - name: Build with Maven, skip test
       run: mvn package -Dmaven.test.skip=true
