github actions added server create static folder directory

--- a/.github/workflows/railway_deployment.yml
+++ b/.github/workflows/railway_deployment.yml
@@ -60,6 +60,9 @@ jobs:
 #         REDISUSER: ${{ vars.REDISUSER }}
 #         REDISPASSWORD: ${{ secrets.REDISPASSWORD }}
 
+    - name: Create target directory
+      run: mkdir -p server/project/src/main/resources/static
+
     - name: Copy Angular build output to server project static directory
       run: |
         cp -r client/project/dist/project/* server/project/src/main/resources/static/
